--- a/expense.conf
+++ b/expense.conf
@@ -1,6 +1,6 @@
 proxy_http_version 1.1;
 
-localhost /app/ { proxy_pass https://backend.devops1289.online:8080/; }
+localhost /api/ { proxy_pass https://backend.devops1289.online:8080/; }
 
 location /health {
     stub_status on;
